fix vertical alignment issues in horizontal panel. Now loks nice, yay

--- a/ui/src/main/java/com/fbratu/relevant/gwt/client/view/um/login/LoginPanel.css
+++ b/ui/src/main/java/com/fbratu/relevant/gwt/client/view/um/login/LoginPanel.css
@@ -5,13 +5,6 @@
     text-align: left;
 }
 
-.redText {
-    font-family: Arial, Sans-serif;
-    color: #ff0000;
-    font-size: 11px;
-    text-align: left;
-}
-
 .loginButton {
     border: 1px solid #3399DD;
     color: #FFFFFF;
