--- a/ui/src/main/java/com/fbratu/relevant/gwt/client/view/um/signedUser/SignedInPanel.css
+++ b/ui/src/main/java/com/fbratu/relevant/gwt/client/view/um/signedUser/SignedInPanel.css
@@ -8,9 +8,9 @@
 .usernameText {
     font-family: "Times New Roman",Times,serif;
     color: indianred;
-    font-size: 14px;
+    font-size: 18px;
     text-align: left;
-    margin: 0 10px;
+    margin: 0 5px;
 }
 
 .logoutText {
